[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runtoolsio-sns"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.12"
dynamic = ["version", "description"]
dependencies = [
    "runtoolsio-runcore>=0.1,<0.2",
    "boto3>=1.34,<2",
]

[project.entry-points."runtools.plugins"]
sns = "runtools.sns.plugin:SnsPlugin"

[project.optional-dependencies]
test = ["pytest"]

[tool.flit.module]
name = "runtools.sns"

[tool.pytest.ini_options]
pythonpath = "src"

[project.urls]
Home = "https://github.com/runtoolsio/sns"
